--- a/mystyles.css
+++ b/mystyles.css
@@ -1,6 +1,6 @@
 h1 {
   background-color: red;
-  border: 2px dashed blue;
+  border: 2px dashed black;
   border-radius: 2px;
   padding: 2px;
   margin: 3px;
