--- a/mystyles.css
+++ b/mystyles.css
@@ -1,5 +1,5 @@
 h1 {
-  background-color: red;
+  background-color: blueviolet;
   border: 2px dashed black;
   border-radius: 2px;
   padding: 2px;
